ref #13 add report apis
