# controller/interfaces.go
@@ -17,4 +17,8 @@ type OrganizationUseCase interface {
 	UpdateOrganization(ctx context.Context, oldOrganizationCode, userID, organizationName, organizationCode, mission, vision, value string) (*entity.Organization, error)
 }
 
-type ReportUseCase interface{}
+type ReportUseCase interface {
+	GetReports(ctx context.Context, organizationCode, userID string) ([]*entity.Report, error)
+	GetReport(ctx context.Context, organizationCode, reportID, userID string) (*entity.Report, error)
+	CreateReport(ctx context.Context, organizationCode, userID, body string, task []entity.Task) (*entity.Report, error)
+}
